# QA_Feels_Good

./: .gitignore  README.md  pyproject.toml
practice-week2/: week2_2.py  week2_6.py  week2_7.py  week2_choose_max_int.py  week2_classCar.py  week2_classLead.py  week2_words_longer_five.py
