[project]
name = "qa-feels-good"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    # Сюда можно будет добавлять ваши библиотеки, например:
    # "pytest>=8.0.0",
    "pytest (>=9.0.3,<10.0.0)"
]

# Добавьте этот блок ниже:
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
